2010-02-12  Kwang Yul Seo  <skyul@company100.net>

Reviewed by Adam Barth.

        Typedef both JSChar and UChar to wchar_t in RVCT.
        https://bugs.webkit.org/show_bug.cgi?id=34560

        Define both JSChar and UChar to wchar_t as the size
        of wchar_t is 2 bytes in RVCT.

        * API/JSStringRef.h:
        * wtf/unicode/qt4/UnicodeQt4.h:

Canonical link: https://commits.webkit.org/46027@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@54717 268f45cc-cd09-0410-ab3c-d52691b4dbfc